# axum-pg-redis

./: .env.example  Cargo.toml  README.md
migration/src/: lib.rs  m20230130_073549_create_employees_table.rs
src/: app.rs  main.rs  structs.rs
src/models/: employees.rs  mod.rs  prelude.rs
src/routes/: employee.rs  mod.rs
